--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
+<button *ngIf="userService.isAdmin()" igxButton [routerLink]="'/auth/user-manager'">Администрация</button>
 <router-outlet></router-outlet>
