--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,18 @@
-<button *ngIf="userService.isAdmin()" igxButton [routerLink]="'/auth/user-manager'">Администрация</button>
+<div class="navbar-wrapper">
+  <igx-navbar>
+    <div igxNavbarTitle>
+      <img src="/assets/logo.png" alt="" width="50px" height="50px">
+      <span style="margin-left: 1rem;">Атмосфера Спорт</span>
+    </div>
+    <button *ngIf="userService.isAdmin()" igxButton [routerLink]="'/auth/user-manager'">Администрация</button>
+    <button *ngIf="userService.isLoggedIn()" igxButton (click)="settings()">Настройки</button>
+    <button *ngIf="userService.isLoggedIn()" igxButton (click)="userService.logout()">Изход</button>
+    <button *ngIf="this.userService.isLoggedIn()" igxButton="flat" type="button">
+      <igx-avatar [initials]="userService.userName"></igx-avatar>
+    </button>
+  </igx-navbar>
+</div>
 <router-outlet></router-outlet>
+<igx-dialog>
+
+</igx-dialog>
