feat: CRUD for properties

--- a/frontend/src/app/auth/user-settings/user-settings.component.html
+++ b/frontend/src/app/auth/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="container">
   <igx-card>
     <igx-card-header>
       <h5 igxCardHeaderTitle>{{ userService.userName }}</h5>
