--- a/frontend/src/app/auth/user-settings/user-settings.component.scss
+++ b/frontend/src/app/auth/user-settings/user-settings.component.scss
@@ -1,3 +1,10 @@
+.container {
+  max-width: 600px;
+  background-color: hsla(var(--igx-surface-500));
+  margin: 2rem auto;
+  padding: 2rem;
+}
+
 .inputs {
   display: flex;
   height: 200px;
