--- a/frontend/src/app/moderator/property/property.component.html
+++ b/frontend/src/app/moderator/property/property.component.html
@@ -30,7 +30,7 @@
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
                         style="height: max-content; min-width: min-content;">
-                        <igx-select-item [value]="cell.editValue?.id == person.id ? cell.editValue : person" *ngFor="let person of people | async">
+                        <igx-select-item [value]="cell.editValue?.id == person.id ? cell.editValue : person" *ngFor="let person of people | async | sort:'name'">
                             {{person.name}}
                         </igx-select-item>
                     </igx-select>
