--- a/frontend/src/app/moderator/pet/pet.component.html
+++ b/frontend/src/app/moderator/pet/pet.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-    <igx-grid [data]="pets | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
-      (rowAdded)="petAdded($event)" (rowEditDone)="petEdited($event)" (rowDeleted)="petDeleted($event)">
-      <igx-column field="number"></igx-column>
-      <igx-column field="name"></igx-column>
-      <igx-action-strip #actionstrip>
-        <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
-      </igx-action-strip>
-    </igx-grid>
-  </div>
+  <igx-grid [data]="pets | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
+    (rowAdded)="petAdded($event)" (rowEditDone)="petEdited($event)" (rowDeleted)="petDeleted($event)"
+    [sortingOptions]="sortingOptions">
+    <igx-column field="number" header="Номер" [sortable]="true"></igx-column>
+    <igx-column field="name" header="Име" [sortable]="true"></igx-column>
+    <igx-action-strip #actionstrip>
+      <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
+    </igx-action-strip>
+  </igx-grid>
+</div>
