--- a/frontend/src/app/moderator/property/property.component.html
+++ b/frontend/src/app/moderator/property/property.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <igx-hierarchical-grid #grid [data]="properties | async" width="100%" height="600px" [rowEditable]="true"
         [primaryKey]="'id'" (rowAdded)="propertyAdded($event)" (rowEditDone)="propertyEdited($event)"
-        (rowDeleted)="propertyDeleted($event)">
-        <igx-column field="type" [sortable]="true">
+        (rowDeleted)="propertyDeleted($event)" [sortingOptions]="sortingOptions">
+        <igx-column field="type" header="Вид на имота" [sortable]="true">
             <ng-template igxCell let-cell="cell">
                 {{ parseType(cell.value) }}
             </ng-template>
@@ -15,28 +15,29 @@
                 </igx-select>
             </ng-template>
         </igx-column>
-        <igx-column field="number" [sortable]="true"></igx-column>
-        <igx-column field="share" dataType="number" [sortable]="true"></igx-column>
+        <igx-column field="number" header="Номер" [sortable]="true"></igx-column>
+        <igx-column field="share" header="Дял в %" dataType="number" [sortable]="true"></igx-column>
 
         <igx-action-strip>
             <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
         </igx-action-strip>
 
         <igx-row-island #personRowIsland [key]="'people'" [primaryKey]="'id'" [rowEditable]="true">
-            <igx-column field="person">
+            <igx-column field="person" header="Име" [sortable]="true">
                 <ng-template igxCell let-cell="cell">
                     {{ cell.value?.name ?? '' }}
                 </ng-template>
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
                         style="height: max-content; min-width: min-content;">
-                        <igx-select-item [value]="cell.editValue?.id == person.id ? cell.editValue : person" *ngFor="let person of people | async | sort:'name'">
+                        <igx-select-item [value]="cell.editValue?.id == person.id ? cell.editValue : person"
+                            *ngFor="let person of people | async | sort:'name'">
                             {{person.name}}
                         </igx-select-item>
                     </igx-select>
                 </ng-template>
             </igx-column>
-            <igx-column field="type">
+            <igx-column field="type" header="Вид" [sortable]="true">
                 <ng-template igxCell let-cell="cell">
                     {{ parsePersonType(cell.value) }}
                 </ng-template>
@@ -49,7 +50,7 @@
                     </igx-select>
                 </ng-template>
             </igx-column>
-            <igx-column field="residence">
+            <igx-column field="residence" header="Присъствие" [sortable]="true">
                 <ng-template igxCell let-cell="cell">
                     {{ parseResidence(cell.value) }}
                 </ng-template>
@@ -62,9 +63,10 @@
                     </igx-select>
                 </ng-template>
             </igx-column>
-            <igx-column field="monthsInHouse" dataType="number"></igx-column>
-            <igx-column field="registeredOn" dataType="date"></igx-column>
-            <igx-column field="unRegisteredOn" dataType="date"></igx-column>
+            <igx-column field="monthsInHouse" header="Месеци/Година в имота" [sortable]="true"
+                dataType="number"></igx-column>
+            <igx-column field="registeredOn" header="Регистриран на" [sortable]="true" dataType="date"></igx-column>
+            <igx-column field="unRegisteredOn" header="Отписан на" [sortable]="true" dataType="date"></igx-column>
 
             <igx-action-strip>
                 <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
@@ -72,12 +74,12 @@
         </igx-row-island>
 
         <igx-row-island #carRowIsland [key]="'cars'" [primaryKey]="'id'" [rowEditable]="true">
-            <igx-column field="number">
+            <igx-column field="number" header="Регистрационен №" [sortable]="true">
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
                         style="height: max-content; min-width: min-content;">
-                        <igx-select-item [value]="car.number" *ngFor="let car of cars | async">
-                            {{car.number}}
+                        <igx-select-item [value]="car.number" *ngFor="let car of cars | async | sort:'number'">
+                            {{car.number}} - {{car.brand}} - {{car.color}}
                         </igx-select-item>
                     </igx-select>
                 </ng-template>
@@ -89,11 +91,11 @@
         </igx-row-island>
 
         <igx-row-island #petRowIsland [key]="'pets'" [primaryKey]="'id'" [rowEditable]="true">
-            <igx-column field="number">
+            <igx-column field="number" header="Номер" [sortable]="true">
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
                         style="height: max-content; min-width: min-content;">
-                        <igx-select-item [value]="pet.number" *ngFor="let pet of pets | async">
+                        <igx-select-item [value]="pet.number" *ngFor="let pet of pets | async | sort:'number'">
                             {{pet.number}} - {{pet.name}}
                         </igx-select-item>
                     </igx-select>
