feat: teaming and localization

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-wrapper">
   <igx-navbar>
     <div igxNavbarTitle>
-      <img src="../assets/logo.png" alt="" width="50px" height="50px">
+      <img src="../domoupravitel-front/assets/logo.png" alt="" width="50px" height="50px">
       <span style="margin-left: 1rem;">Равногор №1</span>
     </div>
     <button *ngIf="userService.isLoggedIn()" igxButton (click)="userService.logout()">Изход</button>
