--- a/frontend/src/app/moderator/property/property.component.html
+++ b/frontend/src/app/moderator/property/property.component.html
@@ -23,6 +23,9 @@
         </igx-action-strip>
 
         <igx-row-island #personRowIsland [key]="'people'" [primaryKey]="'id'" [rowEditable]="true">
+            <igx-grid-toolbar [grid]="personRowIsland" *igxGridToolbar="let personRowIsland">
+                <igx-grid-toolbar-title>Хора</igx-grid-toolbar-title>
+            </igx-grid-toolbar>
             <igx-column field="person" header="Име" [sortable]="true">
                 <ng-template igxCell let-cell="cell">
                     {{ cell.value?.name ?? '' }}
@@ -74,6 +77,9 @@
         </igx-row-island>
 
         <igx-row-island #carRowIsland [key]="'cars'" [primaryKey]="'id'" [rowEditable]="true">
+            <igx-grid-toolbar [grid]="carRowIsland" *igxGridToolbar="let carRowIsland">
+                <igx-grid-toolbar-title>Автомобили</igx-grid-toolbar-title>
+            </igx-grid-toolbar>
             <igx-column field="number" header="Регистрационен №" [sortable]="true">
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
@@ -91,6 +97,9 @@
         </igx-row-island>
 
         <igx-row-island #petRowIsland [key]="'pets'" [primaryKey]="'id'" [rowEditable]="true">
+            <igx-grid-toolbar [grid]="petRowIsland" *igxGridToolbar="let petRowIsland">
+                <igx-grid-toolbar-title>Животни</igx-grid-toolbar-title>
+            </igx-grid-toolbar>
             <igx-column field="number" header="Номер" [sortable]="true">
                 <ng-template igxCellEditor let-cell="cell">
                     <igx-select type="border" [(ngModel)]="cell.editValue"
