--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,15 +1,14 @@
 
 @use "@infragistics/igniteui-angular/theming" as *;
-// Uncomment the following lines if you want to add a custom palette:
-// $primary: #731963 !default;
-// $secondary: #ce5712 !default;
-// $app-palette: palette($primary, $secondary);
 
-/* autoprefixer grid: on */
+$primary: #048796 !default;
+$secondary: #048796 !default;
+$surface: #fff !default;
+$app-palette: palette($primary, $secondary, $surface);
 
 @include core();
-@include typography($font-family: $material-typeface, $type-scale: $material-type-scale);
-@include theme($default-palette);
+@include typography($font-family: $fluent-typeface, $type-scale: $fluent-type-scale);
+@include theme($app-palette);
+
 // CSS Reset, comment out if not required or using a different module
 @import 'minireset.css/minireset';
-/* You can add global styles to this file, and also import other style files */
