--- a/frontend/src/app/moderator/car/car.component.html
+++ b/frontend/src/app/moderator/car/car.component.html
@@ -1,12 +1,21 @@
 <div class="container">
-  <igx-grid [data]="cars | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
-    (rowAdded)="carAdded($event)" (rowEditDone)="carEdited($event)" (rowDeleted)="carDeleted($event)"
+  <igx-grid #grid [data]="cars | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
+    (rowAdded)="carAdded($event)" (rowEditDone)="carEdited($event)"
     [sortingOptions]="sortingOptions">
+    <igx-grid-toolbar>
+      <igx-grid-toolbar-actions>
+        <button igxButton (click)="addCar(grid)">Добави кола</button>
+      </igx-grid-toolbar-actions>
+    </igx-grid-toolbar>
+    <igx-column width="60px" [editable]="false">
+      <ng-template igxCell let-cell="cell">
+        <button igxButton="icon" (click)="carDeleted(cell)">
+          <igx-icon>delete</igx-icon>
+        </button>
+      </ng-template>
+    </igx-column>
     <igx-column field="number" header="Регистрационен №" [sortable]="true"></igx-column>
     <igx-column field="brand" header="Марка" [sortable]="true"></igx-column>
     <igx-column field="color" header="Цвят" [sortable]="true"></igx-column>
-    <igx-action-strip #actionstrip>
-      <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
-    </igx-action-strip>
   </igx-grid>
 </div>
