--- a/frontend/src/app/moderator/people/people.component.html
+++ b/frontend/src/app/moderator/people/people.component.html
@@ -1,7 +1,18 @@
 <div class="container">
-  <igx-grid [data]="people | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
-    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" (rowDeleted)="personDeleted($event)"
-    [sortingOptions]="sortingOptions">
+  <igx-grid #grid [data]="people | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
+    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions">
+    <igx-grid-toolbar>
+      <igx-grid-toolbar-actions>
+        <button igxButton (click)="addPerson(grid)">Добави човек</button>
+      </igx-grid-toolbar-actions>
+    </igx-grid-toolbar>
+    <igx-column width="60px" [editable]="false">
+      <ng-template igxCell let-cell="cell">
+        <button igxButton="icon" (click)="personDeleted(cell)">
+          <igx-icon>delete</igx-icon>
+        </button>
+      </ng-template>
+    </igx-column>
     <igx-column field="name" header="Име" [sortable]="true"></igx-column>
     <igx-column field="phone" header="Телефон" [sortable]="true"></igx-column>
     <igx-column field="email" header="e-mail" [sortable]="true"></igx-column>
