feat: make it look much better and consistent

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="navbar-wrapper">
   <igx-navbar>
     <div igxNavbarTitle>
-      <img src="../domoupravitel-front/assets/logo.png" alt="" width="50px" height="50px">
-      <span style="margin-left: 1rem;">Равногор №1</span>
+      <h4 style="margin: 0 auto; color: hsla(var(--ig-surface-500))">Равногор №1</h4>
     </div>
     <button *ngIf="userService.isLoggedIn()" igxButton="raised" (click)="userService.logout()">Изход</button>
     <button *ngIf="this.userService.isLoggedIn()" igxButton="flat" type="button" routerLink="/auth/user-settings">
