--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 600px;
-  background-color: hsla(var(--igx-surface-500));
+  background-color: hsla(var(--ig-surface-500));
   margin: 2rem auto;
   padding: 2rem;
 }
