--- a/frontend/src/app/auth/user-manager/user-manager.component.html
+++ b/frontend/src/app/auth/user-manager/user-manager.component.html
@@ -1,9 +1,20 @@
 <div class="container">
-  <igx-grid [data]="users | async" width="800px" height="600px" [rowEditable]="true" [primaryKey]="'id'"
+  <igx-grid #grid [data]="users | async" width="100%" height="700px" [rowEditable]="true" [primaryKey]="'id'"
     (rowAdded)="userAdded($event)" (rowEditDone)="userEdited($event)">
-    <igx-column field="id"></igx-column>
-    <igx-column field="userName"></igx-column>
-    <igx-column field="role">
+    <igx-grid-toolbar>
+      <igx-grid-toolbar-actions>
+        <button igxButton (click)="addUser(grid)">Добави потребител</button>
+      </igx-grid-toolbar-actions>
+    </igx-grid-toolbar>
+    <!-- <igx-column width="60px" [editable]="false">
+      <ng-template igxCell let-cell="cell">
+        <button igxButton="icon" (click)="startDeleteUser(cell)">
+          <igx-icon>delete</igx-icon>
+        </button>
+      </ng-template>
+    </igx-column> -->
+    <igx-column field="userName" header="Потребителско име"></igx-column>
+    <igx-column field="role" header="Роля">
       <ng-template igxCell let-cell="cell">
         {{ parseRole(cell.value) }}
       </ng-template>
@@ -15,9 +26,7 @@
         </igx-select>
       </ng-template>
     </igx-column>
-    <igx-column field="password"></igx-column>
-    <igx-action-strip #actionstrip>
-      <igx-grid-editing-actions [addRow]="true"></igx-grid-editing-actions>
-    </igx-action-strip>
+    <igx-column field="password" header="Парола"></igx-column>
   </igx-grid>
 </div>
+<igx-dialog #dialog><app-delete-dialog #deleteDialog></app-delete-dialog></igx-dialog>
