--- a/frontend/src/app/auth/user-manager/user-manager.component.scss
+++ b/frontend/src/app/auth/user-manager/user-manager.component.scss
@@ -1,6 +1,6 @@
 .container {
-  max-width: 1140px;
-  height: 100%;
+  max-width: 100%;
+  height: 700px;
   overflow: auto;
-  background-color: hsla(var(--igx-surface-500));
+  background-color: hsla(var(--ig-surface-500));
 }
