--- a/frontend/src/app/auth/user-settings/user-settings.component.html
+++ b/frontend/src/app/auth/user-settings/user-settings.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <igx-card>
+  <igx-card style="width: 600px; margin: 0 auto;">
     <igx-card-header>
       <h5 igxCardHeaderTitle>{{ userService.userName }}</h5>
     </igx-card-header>
