--- a/frontend/src/app/auth/user-settings/user-settings.component.scss
+++ b/frontend/src/app/auth/user-settings/user-settings.component.scss
@@ -1,7 +1,7 @@
 .container {
-  max-width: 600px;
-  background-color: hsla(var(--igx-surface-500));
-  margin: 2rem auto;
+  max-width: 100%;
+  height: 700px;
+  background-color: hsla(var(--ig-surface-500));
   padding: 2rem;
 }
 
