chore: rename shared delete component
Add simple combo is people grid island

--- a/frontend/src/app/auth/user-manager/user-manager.component.html
+++ b/frontend/src/app/auth/user-manager/user-manager.component.html
@@ -29,4 +29,4 @@
     <igx-column field="password" header="Парола"></igx-column>
   </igx-grid>
 </div>
-<igx-dialog #dialog><app-delete-dialog #deleteDialog></app-delete-dialog></igx-dialog>
+<igx-dialog #dialog><app-delete #deleteDialog></app-delete></igx-dialog>
