--- a/frontend/src/app/moderator/car/car.component.html
+++ b/frontend/src/app/moderator/car/car.component.html
@@ -18,4 +18,4 @@
     <igx-column field="color" header="Цвят" [sortable]="true"></igx-column>
   </igx-grid>
 </div>
-<igx-dialog #dialog><app-delete-dialog #deleteDialog></app-delete-dialog></igx-dialog>
+<igx-dialog #dialog><app-delete #deleteDialog></app-delete></igx-dialog>
