feat: add hasChip to people

--- a/frontend/src/app/moderator/add-person/add-person.component.html
+++ b/frontend/src/app/moderator/add-person/add-person.component.html
@@ -15,6 +15,7 @@
         <label igxLabel for="email">e-mail</label>
         <igx-hint>Въведете електрония адрес на човека</igx-hint>
       </igx-input-group>
+      <igx-switch name="hasChip" formControlName="hasChip">Чип</igx-switch>
       <div class="actions">
         <button igxButton="flat" type="button" igxRipple (click)="cancel()">Откажи</button>
         <button igxButton="raised" type="submit" igxRipple [disabled]="!person.valid">Добави</button>
