feat: add person birth date front end

--- a/frontend/src/app/moderator/add-person/add-person.component.html
+++ b/frontend/src/app/moderator/add-person/add-person.component.html
@@ -15,6 +15,10 @@
         <label igxLabel for="email">e-mail</label>
         <igx-hint>Въведете електрония адрес на човека</igx-hint>
       </igx-input-group>
+      <igx-date-picker type="border" name="birthDate" formControlName="birthDate">
+        <label igxLabel for="birthDate">Роден на</label>
+        <igx-hint>Въведете дата на раждане на човека</igx-hint>
+      </igx-date-picker>
       <igx-switch name="hasChip" formControlName="hasChip">Чип</igx-switch>
       <div class="actions">
         <button igxButton="flat" type="button" igxRipple (click)="cancel()">Откажи</button>
