--- a/frontend/src/app/moderator/people/people.component.html
+++ b/frontend/src/app/moderator/people/people.component.html
@@ -13,12 +13,12 @@
         </button>
       </ng-template>
     </igx-column>
-    <igx-column field="name" header="Име" [sortable]="true"></igx-column>
-    <igx-column field="phone" header="Телефон" [sortable]="true"></igx-column>
-    <igx-column field="email" header="e-mail" [sortable]="true"></igx-column>
-    <igx-column field="birthDate" header="Роден на" [sortable]="true" [dataType]="'date'"></igx-column>
+    <igx-column field="name" header="Име" [sortable]="true" [resizable]="true"></igx-column>
+    <igx-column field="phone" header="Телефон" [sortable]="true" [resizable]="true"></igx-column>
+    <igx-column field="email" header="e-mail" [sortable]="true" [resizable]="true"></igx-column>
+    <igx-column field="birthDate" header="Роден на" [sortable]="true" [dataType]="'date'" [resizable]="true"></igx-column>
     <igx-column field="hasChip" header="Чип" [dataType]="'boolean'" [width]="'80px'"></igx-column>
-    <igx-column field="email" header="Имоти" [editable]="false">
+    <igx-column field="email" header="Имоти" [editable]="false" [resizable]="true">
       <ng-template igxCell let-cell="cell">
         {{ renderProperties(cell) }}
       </ng-template>
