--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -48,6 +48,12 @@
           <span igxTabHeaderLabel>Имоти</span>
         </igx-tab-header>
       </igx-tab-item>
+      <igx-tab-item routerLinkActive #rlaStaff="routerLinkActive" [selected]="rlaStaff.isActive"
+        *ngIf="this.userService.isAdmin() || this.userService.isModerator()">
+        <igx-tab-header routerLink="/moderator/references">
+          <span igxTabHeaderLabel>Справки</span>
+        </igx-tab-header>
+      </igx-tab-item>
     </igx-tabs>
     <div class="content">
       <router-outlet></router-outlet>
