--- a/frontend/src/app/moderator/people/people.component.scss
+++ b/frontend/src/app/moderator/people/people.component.scss
@@ -2,5 +2,5 @@
   max-width: 1140px;
   height: 100%;
   overflow: auto;
-  background-color: hsla(var(--igx-surface-500));
+  background-color: hsla(var(--ig-surface-500));
 }
